using MediatR;

namespace NERVA.Domain.Common
{
    public abstract class BaseEvent : INotification
    {
    }
}
